updated code from new video

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
       content="width=device-width, initial-scale=1.0" />
     <title>Animated Navbar</title>
     <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com" />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet" />
+    <link
       rel="stylesheet"
       type="text/css"
       href="main.css" />
@@ -150,7 +160,7 @@
         <div class="activeTabIndicator"></div>
       </ul>
     </nav>
-    
+
     <script>
       const list = document.querySelectorAll("li");
 
@@ -162,8 +172,8 @@
       }
 
       list.forEach((item) => {
-        item.addEventListener('click', setActiveTab)
-      })
+        item.addEventListener("click", setActiveTab);
+      });
     </script>
   </body>
 </html>
